--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -16,45 +16,44 @@
                     <div class="dropdown profile-element">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="clear">
-                                <span class="block m-t-xs"><strong class="font-bold"></strong></span>
-                                <span class="text-muted text-xs block">{$account.name}<b class="caret"></b></span>
+                                <span class="text-muted text-xs block">你好，{$account.account}<!--<b class="caret"></b>--></span>
                             </span>
                         </a>
-                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a href="{:url('login/logout')}">安全退出</a></li>
-                        </ul>
                     </div>
                     <div class="logo-element"></div>
                 </li>
                 <li>
-                    <a href="/admin/index"><i class="fa fa-home"></i> <span class="nav-label">主页</span></a>
+                    <a href="{:url('/admin/index/index')}"><i class="fa fa-home"></i> <span class="nav-label">主页</span></a>
                 </li>
                 <!--二级菜单-->
                 {volist name="roleList" id="vo"}
                 <li>
-                    <if condition="$vo['parentid'] eq 0 ">
-                        <if condition="$vo['url'] neq ''">
-                            <a class="J_menuItem" href="{:url($vo['url'])}">
+                    {if condition="$vo['pid'] eq 0 && $vo['status'] eq 1"}
+                        {if condition="$vo['name'] neq ''"}
+                            <a class="J_menuItem" href="{:url($vo['name'])}">
                                 <i class="fa {$vo.faicon}"></i>
-                                <span class="nav-label">{$vo.name}</span>
+                                <span class="nav-label">{$vo.title}</span>
                             </a>
-                            <else/>
+                        {else/}
                             <a href="#">
                                 <i class="fa {$vo.faicon}"></i>
-                                <span class="nav-label">{$vo.name}</span>
+                                <span class="nav-label">{$vo.title}</span>
                                 <span class="fa arrow"></span>
                             </a>
-                        </if>
-                        <volist name="roleList" id="v">
-                            <if condition="$v['parentid'] eq $vo['id']">
+                        {/if}
+                        {volist name="roleList" id="v"}
+                            {if condition="$v['pid'] eq $vo['id'] && $v['status'] eq 1"}
                                 <ul class="nav nav-second-level collapse" aria-expanded="false">
                                     <li>
-                                        <a class="J_menuItem" href="{:url($v['url'])}">{$v.name}</a>
+                                        <a class="J_menuItem" href="{:url($v['name'])}">
+                                            <i class="fa {$v.faicon}"></i>
+                                            <span>{$v.title}</span>
+                                        </a>
                                     </li>
                                 </ul>
-                            </if>
-                        </volist>
-                    </if>
+                            {/if}
+                        {/volist}
+                    {/if}
                 </li>
                 {/volist}
             </ul>
@@ -91,11 +90,11 @@
                     </li>
                 </ul>
             </div>
-            <a href="/admin/login/logout" class="roll-nav roll-right J_tabExit"><i
+            <a href="{:url('/admin/login/logout')}" class="roll-nav roll-right J_tabExit"><i
                     class="fa fa fa-sign-out"></i> 退出</a>
         </div>
         <div class="row J_mainContent" id="content-main">
-            <iframe class="J_iframe" name="iframemain" id="iframemain" width="100%" height="100%" src="__URL__/main"
+            <iframe class="J_iframe" name="iframemain" id="iframemain" width="100%" height="100%" src="{:url('/admin/index/main')}"
                     frameborder="0" data-id="main" seamless></iframe>
         </div>
         <div class="footer">
