--- a/application/admin/view/login/index.html
+++ b/application/admin/view/login/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="form-group">
-                <div><img src="{:captcha_src()}" alt="captcha" onclick="this.src=this.src+'?'+Math.random()"/></div>
+                <div><img style="width:100%;" src="{:captcha_src()}" alt="captcha" onclick="this.src=this.src+'?'+Math.random()"/></div>
             </div>
             <button type="submit" class="btn btn-primary block full-width m-b">登 录</button>
         </form>
