--- a/application/admin/view/common/base.html
+++ b/application/admin/view/common/base.html
@@ -17,3 +17,5 @@
 <!-- base -->
 {load href="/static/admin/js/base.js" /}
 {load href="/static/common/js/layer-v3.1.1/layer/layer.js" /}
+{load href="/static/admin/js/plugins/Bootstrap-icon-picker-master/css/icon-picker.min.css" /}
+{load href="/static/admin/js/plugins/Bootstrap-icon-picker-master/js/iconPicker.min.js" /}
