--- a/application/admin/view/auth/auth/add.html
+++ b/application/admin/view/auth/auth/add.html
@@ -1,10 +1,11 @@
 <div class="col-xs-12">
 	<div class="row">
-		<form class="form-horizontal" role="form" id="form" action="{:url('/admin/auth/add')}">
+		<form class="form-horizontal" role="form" id="form" action="{:url('/admin/auth/addRule')}">
 			<div class="form-group">
+				{include file="tpl/selectCol" name="pid" results="data" label="父级" list="rulelist"/}
 				{include file="tpl/input" name="title" label="标题" value="" attr='data-rule="required;"'/}
 				{include file="tpl/input" name="name" label="菜单规则" value="" attr='data-rule="required;"'/}
-				{include file="tpl/selectCol" name="pid" label="父级" list="rulelist"  value="" attr='data-rule="required;"'/}
+				{include file="tpl/faicon" name="faicon" label="图标" value="" attr='data-rule="required;"'/}
 			</div>
 			<div class="form-group" style="margin-top: 20px;">
 				{include file="tpl/button" label="保存"/}
