--- a/application/admin/view/tpl/input.html
+++ b/application/admin/view/tpl/input.html
@@ -2,7 +2,7 @@
     <div class="row">
         {include file="tpl/label" label="[label]"}
         <div class="col-xs-9">
-            <input id="[name]" name="[name]" class="form-control" type="text" value="[value]" placeholder="[label]" [attr]>
+            <input id="[name]" name="[name]" class="form-control" type="text" value="{php}echo $[value];{/php}" placeholder="[label]" [attr]>
         </div>
     </div>
 </div>
