--- a/application/admin/view/admin/index.html
+++ b/application/admin/view/admin/index.html
@@ -62,7 +62,7 @@
                         {/eq}
                         <!--编辑资料-->
 
-                        <i class="fa fa-edit qg-op-btn qg-tooltip" data-toggle="tooltip" data-placement="top" title="编辑" onclick="modal('/admin/admin/edit, array(\'id\'=>$vo[\'id\']))}', '编辑','80%','50%')"></i>
+                        <i class="fa fa-edit qg-op-btn qg-tooltip" data-toggle="tooltip" data-placement="top" title="编辑" onclick="modal('{:url(\'/admin/admin/edit\',[\'id\'=>$vo[\'id\']])}', '编辑','80%','50%')"></i>
                         <!--删除-->
                         <i class="fa fa-trash-o qg-tooltip qg-op-btn" data-toggle="tooltip" data-placement="top" title="删除" onclick="confirmUpdate('/admin/admin/delete','{$vo.id}','确定要删除吗？')"></i>
                     {/if}
