--- a/application/admin/view/auth/group/edit.html
+++ b/application/admin/view/auth/group/edit.html
@@ -1,8 +1,9 @@
 <div class="col-xs-12">
 	<div class="row">
-		<form class="form-horizontal" role="form" id="form" action="{:url('/admin/auth/add')}">
+		<form class="form-horizontal" role="form" id="form" action="{:url('/admin/auth/edit')}">
 			<div class="form-group">
-				{include file="tpl/input" results="data" name="title" label="角色名称" value="" attr='data-rule="required;"'/}
+				<input type="hidden" name="id" value="{$info.id}">
+				{include file="tpl/input" results="data" name="title" label="角色名称" value="title" attr='data-rule="required;"'/}
 				{include file="tpl/ztree" label="权限" results="data" name="rules" value=""/}
 			</div>
 			<div class="form-group" style="margin-top: 20px;">
