--- a/application/admin/view/auth/group/group.html
+++ b/application/admin/view/auth/group/group.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12">
             <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1 pull-left">
                 <div class="row">
-                    {include file='tpl/addBtn' url="/admin/auth/add" height="80%" width="30%"/}
+                    {include file='tpl/addBtn' url="/admin/auth/add" height="80%" width="80%"/}
                 </div>
             </div>
             <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1">
@@ -35,7 +35,7 @@
                 <td nowrap="nowrap">{$vo.title}</td>
                 <td nowrap="nowrap">
                     <!--编辑资料-->
-                    <i class="fa fa-edit qg-op-btn qg-tooltip" data-toggle="tooltip" data-placement="top" title="编辑" onclick="modal('/admin/auth/edit, array(\'id\'=>$vo[\'id\']))}', '编辑','80%','50%')"></i>
+                    <i class="fa fa-edit qg-op-btn qg-tooltip" data-toggle="tooltip" data-placement="top" title="编辑" onclick="modal('{:url(\'/admin/auth/edit\',[\'id\'=>$vo[\'id\']])}', '编辑','80%','50%')"></i>
                     <!--删除-->
                     <i class="fa fa-trash-o qg-tooltip qg-op-btn" data-toggle="tooltip" data-placement="top" title="删除" onclick="confirmUpdate('/admin/auth/del','{$vo.id}','确定要删除吗？')"></i>
                 </td>
