--- a/application/admin/view/tpl/faicon.html
+++ b/application/admin/view/tpl/faicon.html
@@ -2,7 +2,7 @@
     <div class="row">
         {include file="tpl/label" label="[label]"}
         <div class="col-xs-9">
-            <input id="[name]" name="[name]" value="{php}echo $[value];{/php}" type="text" class="form-control txt_boostrap_icon" placeholder="[label]" [attr]>
+            <input id="[name]" name="[name]" value="{$[results]['[value]']??''}" type="text" class="form-control txt_boostrap_icon" placeholder="[label]" [attr]>
         </div>
     </div>
 </div>
