--- a/application/admin/view/Member/index.html
+++ b/application/admin/view/Member/index.html
@@ -1,6 +1,12 @@
 {include file="tpl/style"/}
 <form role="form" id="searchForm" action="{:url('/admin/member/index')}" method='post' class="form-horizontal">
     <div class="form-group">
+        {include file="tpl/search" results="params" name="account1" label="账号" attr=''/}
+        {include file="tpl/search" results="params" name="nickName" label="昵称" attr=''/}
+        {include file="tpl/select" results="params" name="isDisable" label="是否禁用" list="isDisable" attr='' /}
+        {include file="tpl/time" results="params" name="createtimeStart" label="创建开始时间" attr=''/}
+        {include file="tpl/time" results="params" name="createtimeEnd" label="创建结束时间" attr=''/}
+        {include file="tpl/select" results="params" name="pageSize" list="pageSize" label="每页条数"/}
         <div class="col-xs-12">
             <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1 pull-left">
                 <div class="row">
@@ -14,8 +20,8 @@
             </div>
             <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1 pull-right">
                 <div class="row">
-                    <!--{include file="tpl/searchBtn" /}-->
-                    <!--{include file="tpl/reloadBtn" /}-->
+                    {include file="tpl/searchBtn" /}
+                    {include file="tpl/reloadBtn" /}
                 </div>
             </div>
         </div>
