--- a/application/admin/view/Member/index.html
+++ b/application/admin/view/Member/index.html
@@ -1,7 +1,7 @@
 {include file="tpl/style"/}
 <form role="form" id="searchForm" action="{:url('/admin/member/index')}" method='post' class="form-horizontal">
     <div class="form-group">
-        {include file="tpl/search" results="params" name="account1" label="账号" attr=''/}
+        {include file="tpl/search" results="params" name="account" label="账号" attr=''/}
         {include file="tpl/search" results="params" name="nickName" label="昵称" attr=''/}
         {include file="tpl/select" results="params" name="isDisable" label="是否禁用" list="isDisable" attr='' /}
         {include file="tpl/time" results="params" name="createtimeStart" label="创建开始时间" attr=''/}
