--- a/application/admin/view/admin/index.html
+++ b/application/admin/view/admin/index.html
@@ -47,8 +47,8 @@
                         未分配角色
                     {/notempty}
                 </td>
-                <td nowrap="nowrap">{$vo.isDisable|getDropdownList="isDisable",###}</td>
-                <td nowrap="nowrap">{$vo.create_time}</td>
+                <td nowrap="nowrap">{$vo.isdisable|getDropdownList="isDisable",###}</td>
+                <td nowrap="nowrap">{$vo.createtime}</td>
                 <td nowrap="nowrap">
                     <!-- 自己不能操作自己 -->
                     {if condition="($vo['id'] eq $account['id']) && (1 neq $account['id'])"}
