--- a/application/admin/view/Member/index.html
+++ b/application/admin/view/Member/index.html
@@ -3,7 +3,7 @@
     <div class="form-group">
         {include file="tpl/search" results="params" name="account" label="账号" attr=''/}
         {include file="tpl/search" results="params" name="nickName" label="昵称" attr=''/}
-        {include file="tpl/select" results="params" name="isDisable" label="是否禁用" list="isDisable" attr='' /}
+        {include file="tpl/select" results="params" name="isdisable" label="是否禁用" list="isdisable" attr='' /}
         {include file="tpl/time" results="params" name="createtimeStart" label="创建开始时间" attr=''/}
         {include file="tpl/time" results="params" name="createtimeEnd" label="创建结束时间" attr=''/}
         {include file="tpl/select" results="params" name="pageSize" list="pageSize" label="每页条数"/}
