--- a/application/admin/view/admin/add.html
+++ b/application/admin/view/admin/add.html
@@ -6,6 +6,7 @@
 				{include file="tpl/password" name="password" label="密码" value="" attr='data-rule="required;"'/}
 				{include file="tpl/input" results="data" name="name" label="昵称" value="" attr='data-rule="required;"'/}
 				{include file="tpl/selectCol" name="group_id" results="data" label="角色" list="rolelist"/}
+				{include file="tpl/selectCol" name="company_id" results="data" label="所属企业" list="companyList"/}
 			</div>
 			<div class="form-group" style="margin-top: 20px;">
 				{include file="tpl/button" label="保存"/}
