--- a/application/admin/view/Company/edit.html
+++ b/application/admin/view/Company/edit.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12">
     <div class="row">
-        <form class="form-horizontal" role="form" id="form" action="{:url('/admin/company/edit')}">
+        <form class="form-horizontal" role="form" id="form" action="{:url('/admin/repertory/edit')}">
             <div class="form-group">
                 <input type="hidden" name="id" value="{$data.id}">
                 {include file="tpl/input" results="data" name="name" label="公司名称" value="name" attr='data-rule="required;"'/}
