--- a/application/admin/view/repertory/index.html
+++ b/application/admin/view/repertory/index.html
@@ -1,10 +1,10 @@
 {include file="tpl/style"/}
-<form role="form" id="searchForm" action="{:url('/admin/company/index')}" method='post' class="form-horizontal">
+<form role="form" id="searchForm" action="{:url('/admin/repertory/index')}" method='post' class="form-horizontal">
     <div class="form-group">
         <div class="col-xs-12">
             <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1 pull-left">
                 <div class="row">
-                    {include file='tpl/addBtn' url="/admin/company/add" height="80%" width="30%"/}
+                    {include file='tpl/addBtn' url="/admin/repertory/add" height="80%" width="30%"/}
                 </div>
             </div>
             <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1">
@@ -39,9 +39,9 @@
             <td nowrap="nowrap">{$vo.create_time}</td>
             <td nowrap="nowrap">
                 <!--编辑资料-->
-                <i class="fa fa-edit qg-op-btn qg-tooltip" data-toggle="tooltip" data-placement="top" title="编辑" onclick="modal('{:url(\'/admin/company/edit\',[\'id\'=>$vo[\'id\']])}', '编辑','80%','50%')"></i>
+                <i class="fa fa-edit qg-op-btn qg-tooltip" data-toggle="tooltip" data-placement="top" title="编辑" onclick="modal('{:url(\'/admin/repertory/edit\',[\'id\'=>$vo[\'id\']])}', '编辑','80%','50%')"></i>
                 <!--删除-->
-                <i class="fa fa-trash-o qg-tooltip qg-op-btn" data-toggle="tooltip" data-placement="top" title="删除" onclick="confirmUpdate('/admin/company/delete','{$vo.id}','确定要删除吗？')"></i>
+                <i class="fa fa-trash-o qg-tooltip qg-op-btn" data-toggle="tooltip" data-placement="top" title="删除" onclick="confirmUpdate('/admin/repertory/delete','{$vo.id}','确定要删除吗？')"></i>
             </td>
         </tr>
         {/volist}
