--- a/application/admin/view/instorage/index.html
+++ b/application/admin/view/instorage/index.html
@@ -7,6 +7,7 @@
             <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1 pull-left">
                 <div class="row">
                     {include file='tpl/addBtn' url="/admin/instorage/add" height="80%" width="30%"/}
+                    {include file='tpl/addBtn' url="/admin/instorage/add1" height="80%" width="30%"/}
                 </div>
             </div>
             <div class="col-xs-4 col-sm-3 col-md-2 col-lg-1">
