--- a/application/admin/view/steelmanagement/index.html
+++ b/application/admin/view/steelmanagement/index.html
@@ -3,7 +3,7 @@
     <div class="col-sm-12">
         <div class="tabs-container">
             <ul class="nav nav-tabs">
-                <li class="stealclass active"><a data-toggle="tab" data-con="steelmanagement"> 钢品库</a></li>
+                <li class="stealclass active"><a data-toggle="tab" data-con="product"> 钢品库</a></li>
                 <li class="stealclass"><a data-toggle="tab"  data-con="productname">品名</a></li>
                 <li class="stealclass"><a data-toggle="tab" data-con="texture">材质</a></li>
                 <li class="stealclass"><a data-toggle="tab" data-con="originarea">产地</a></li>
@@ -27,25 +27,31 @@
         </div>
     </div>
 </div>
-<p>不展示下拉菜单按钮。</p>
-<div class="row">
-    <div class="col-lg-6">
-        <div class="input-group">
-            <input type="text" class="form-control" id="testNoBtn">
-            <div class="input-group-btn">
-                <button type="button" class="btn btn-white dropdown-toggle"
-                        data-toggle="dropdown">
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                </ul>
-            </div>
-            <!-- /btn-group -->
-        </div>
-    </div>
-</div>
+<!--<p>不展示下拉菜单按钮。</p>-->
+<!--<div class="row">-->
+    <!--<div class="col-lg-3">-->
+        <!--<div class="input-group">-->
+            <!--<input type="text" class="form-control" id="testNoBtn">-->
+            <!--<div class="input-group-btn">-->
+                <!--<button type="button" class="btn btn-white dropdown-toggle"-->
+                        <!--data-toggle="dropdown">-->
+                    <!--<span class="caret"></span>-->
+                <!--</button>-->
+                <!--<ul class="dropdown-menu dropdown-menu-right" role="menu">-->
+                <!--</ul>-->
+            <!--</div>-->
+            <!--&lt;!&ndash; /btn-group &ndash;&gt;-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+<script src="/static/admin/js/bootstrap-suggest.min.js"></script>
 <script>
+
     $(function(){
+        var url="/admin/steelmanagement/product";
+        $.get(url,{},function(data) {
+            $("#tab1").html(data);
+        });
         $(".stealclass").click(function(){
             var classname=$(this).find("a").attr("data-con");
             var url="/admin/steelmanagement/"+classname;
@@ -54,4 +60,20 @@
             });
         })
     })
+    var testBsSuggest = $("#testNoBtn").bsSuggest({
+        // url: "/static/admin/js/data.json",
+        url: "{:url('steelmanagement/ceshi')}",
+        showBtn: false,
+        idField: 2,                    //每组数据的哪个字段作为 data-id，优先级高于 indexId 设置（推荐）
+        keyField: "classname",
+        listAlign: "left",
+        inputWarnColor: "white", //输入框内容不是下拉列表选择时的警告色
+
+    }).on("onDataRequestSuccess", function (b, a) {
+        console.log("onDataRequestSuccess: ", a)
+    }).on("onSetSelectValue", function (b, a) {
+        console.log("onSetSelectValue: ", a)
+    }).on("onUnsetSelectValue", function (a) {
+        console.log("onUnsetSelectValue")
+    });
 </script>
