--- a/application/admin/view/steelmanagement/service.html
+++ b/application/admin/view/steelmanagement/service.html
@@ -3,17 +3,9 @@
     <div class="col-sm-12">
         <div class="tabs-container">
             <ul class="nav nav-tabs">
-                <li class="stealclass active"><a data-toggle="tab" data-con="product"> 钢品库</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="classname">类别</a></li>
-                <li class="stealclass"><a data-toggle="tab"  data-con="productname">品名</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="texture">材质</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="originarea">产地</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="specification">规格</a></li>
+                <li class="stealclass active"><a data-toggle="tab" data-con="custom"> 往来单位</a></li>
                 <li class="stealclass"><a data-toggle="tab" data-con="storage">仓库</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="unit">计量单位</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="jsfs">计算方式</a></li>
-
-
+                <li class="stealclass"><a data-toggle="tab" data-con="transportation">运输方式</a></li>
             </ul>
             <div class="tab-content">
                 <div id="tab1" class="tab-pane active">
@@ -27,26 +19,26 @@
 </div>
 <!--<p>不展示下拉菜单按钮。</p>-->
 <!--<div class="row">-->
-    <!--<div class="col-lg-3">-->
-        <!--<div class="input-group">-->
-            <!--<input type="text" class="form-control" id="testNoBtn">-->
-            <!--<div class="input-group-btn">-->
-                <!--<button type="button" class="btn btn-white dropdown-toggle"-->
-                        <!--data-toggle="dropdown">-->
-                    <!--<span class="caret"></span>-->
-                <!--</button>-->
-                <!--<ul class="dropdown-menu dropdown-menu-right" role="menu">-->
-                <!--</ul>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; /btn-group &ndash;&gt;-->
-        <!--</div>-->
-    <!--</div>-->
+<!--<div class="col-lg-3">-->
+<!--<div class="input-group">-->
+<!--<input type="text" class="form-control" id="testNoBtn">-->
+<!--<div class="input-group-btn">-->
+<!--<button type="button" class="btn btn-white dropdown-toggle"-->
+<!--data-toggle="dropdown">-->
+<!--<span class="caret"></span>-->
+<!--</button>-->
+<!--<ul class="dropdown-menu dropdown-menu-right" role="menu">-->
+<!--</ul>-->
+<!--</div>-->
+<!--&lt;!&ndash; /btn-group &ndash;&gt;-->
+<!--</div>-->
+<!--</div>-->
 <!--</div>-->
 <script src="/static/admin/js/bootstrap-suggest.min.js"></script>
 <script>
 
     $(function(){
-        var url="/admin/steelmanagement/product";
+        var url="/admin/steelmanagement/custom";
         $.get(url,{},function(data) {
             $("#tab1").html(data);
         });
