--- a/application/admin/view/steelmanagement/financeset.html
+++ b/application/admin/view/steelmanagement/financeset.html
@@ -24,22 +24,22 @@
     </div>
 </div>
 <!--<p>不展示下拉菜单按钮。</p>-->
-<!--<div class="row">-->
-    <!--<div class="col-lg-3">-->
-        <!--<div class="input-group">-->
-            <!--<input type="text" class="form-control" id="testNoBtn">-->
-            <!--<div class="input-group-btn">-->
-                <!--<button type="button" class="btn btn-white dropdown-toggle"-->
-                        <!--data-toggle="dropdown">-->
-                    <!--<span class="caret"></span>-->
-                <!--</button>-->
-                <!--<ul class="dropdown-menu dropdown-menu-right" role="menu">-->
-                <!--</ul>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; /btn-group &ndash;&gt;-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
+<div class="row">
+    <div class="col-lg-3">
+        <div class="input-group">
+            <input type="text" class="form-control" id="testNoBtn">
+            <div class="input-group-btn">
+                <button type="button" class="btn btn-white dropdown-toggle"
+                        data-toggle="dropdown">
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                </ul>
+            </div>
+            <!-- /btn-group -->
+        </div>
+    </div>
+</div>
 <script src="/static/admin/js/bootstrap-suggest.min.js"></script>
 <script>
 
@@ -66,20 +66,20 @@
             });
         })
     })
-    // var testBsSuggest = $("#testNoBtn").bsSuggest({
-    //     // url: "/static/admin/js/data.json",
-    //     url: "{:url('steelmanagement/ceshi')}",
-    //     showBtn: false,
-    //     idField: 2,                    //每组数据的哪个字段作为 data-id，优先级高于 indexId 设置（推荐）
-    //     keyField: "classname",
-    //     listAlign: "left",
-    //     inputWarnColor: "white", //输入框内容不是下拉列表选择时的警告色
-    //
-    // }).on("onDataRequestSuccess", function (b, a) {
-    //     console.log("onDataRequestSuccess: ", a)
-    // }).on("onSetSelectValue", function (b, a) {
-    //     console.log("onSetSelectValue: ", a)
-    // }).on("onUnsetSelectValue", function (a) {
-    //     console.log("onUnsetSelectValue")
-    // });
+    var testBsSuggest = $("#testNoBtn").bsSuggest({
+        // url: "/static/admin/js/data.json",
+        url: "{:url('steelmanagement/ceshi')}",
+        showBtn: false,
+        idField: 2,                    //每组数据的哪个字段作为 data-id，优先级高于 indexId 设置（推荐）
+        keyField: "classname",
+        listAlign: "left",
+        inputWarnColor: "white", //输入框内容不是下拉列表选择时的警告色
+
+    }).on("onDataRequestSuccess", function (b, a) {
+        console.log("onDataRequestSuccess: ", a)
+    }).on("onSetSelectValue", function (b, a) {
+        console.log("onSetSelectValue: ", a)
+    }).on("onUnsetSelectValue", function (a) {
+        console.log("onUnsetSelectValue")
+    });
 </script>
