--- a/application/admin/view/steelmanagement/index.html
+++ b/application/admin/view/steelmanagement/index.html
@@ -25,23 +25,23 @@
         </div>
     </div>
 </div>
-<!--<p>不展示下拉菜单按钮。</p>-->
-<!--<div class="row">-->
-    <!--<div class="col-lg-3">-->
-        <!--<div class="input-group">-->
-            <!--<input type="text" class="form-control" id="testNoBtn">-->
-            <!--<div class="input-group-btn">-->
-                <!--<button type="button" class="btn btn-white dropdown-toggle"-->
-                        <!--data-toggle="dropdown">-->
-                    <!--<span class="caret"></span>-->
-                <!--</button>-->
-                <!--<ul class="dropdown-menu dropdown-menu-right" role="menu">-->
-                <!--</ul>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; /btn-group &ndash;&gt;-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
+<p>不展示下拉菜单按钮。</p>
+<div class="row">
+    <div class="col-lg-3">
+        <div class="input-group">
+            <input type="text" class="form-control" id="testNoBtn">
+            <div class="input-group-btn">
+                <button type="button" class="btn btn-white dropdown-toggle"
+                        data-toggle="dropdown">
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                </ul>
+            </div>
+            <!-- /btn-group -->
+        </div>
+    </div>
+</div>
 <script src="/static/admin/js/bootstrap-suggest.min.js"></script>
 <script>
 
