--- a/application/admin/view/steelmanagement/index.html
+++ b/application/admin/view/steelmanagement/index.html
@@ -4,12 +4,12 @@
         <div class="tabs-container">
             <ul class="nav nav-tabs">
                 <li class="stealclass active"><a data-toggle="tab" data-con="product"> 钢品库</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="classname">类别</a></li>
+                <li class="stealclass"><a data-toggle="tab" data-con="classname">大类</a></li>
                 <li class="stealclass"><a data-toggle="tab"  data-con="productname">品名</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="texture">材质</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="originarea">产地</a></li>
                 <li class="stealclass"><a data-toggle="tab" data-con="specification">规格</a></li>
-                <li class="stealclass"><a data-toggle="tab" data-con="storage">仓库</a></li>
+                <li class="stealclass"><a data-toggle="tab" data-con="texture">材质</a></li>
+
+
                 <li class="stealclass"><a data-toggle="tab" data-con="unit">计量单位</a></li>
                 <li class="stealclass"><a data-toggle="tab" data-con="jsfs">计算方式</a></li>
 
