--- a/application/admin/view/purchase/detail.html
+++ b/application/admin/view/purchase/detail.html
@@ -23,11 +23,12 @@
     </div>
 </form>
 <div>
-    <button class="cha"> 查询</button>
+    <button class="cha btn-success bc"> 查询</button>
 </div>
+<div>
 规格： <input type="text" id="guige"> 材质： <input type="text" id="caizhi" > 产地： <input type="text" id="chandi">
-开单日期： <input type="date" id="rq"> 标准：<input type="text"> 备注：
-<input type="text">
+开单日期： <input type="date" id="rq">
+</div>
 <div class="table-responsive">
     <table class="table table-striped">
         <thead>
